# i3xrocks

./: .gitignore  Makefile.am  bar.c  bar.h  config.c  config.h  configure.ac  flake.nix  i3xrocks.conf  ini.c  main.c
debian/: changelog  control  copyright
docs/: README.adoc  blocklets.html  i3xrocks.1  i3xrocks.1.adoc  i3xrocks.1.html  index.html
nixos/: default.nix
